.deprecated/kubernetes/monitoring/heimdall/heimdall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: monitoring
  labels:
    k8s-app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      name: heimdall
  template:
    metadata:
      labels:
        name: heimdall
        k8s-app: heimdall
    spec:
      containers:
      - name: heimdall
        ports:
        - containerPort: 80
        image: linuxserver/heimdall
        volumeMounts:
          - name: heimdall
            mountPath: /config
      volumes:
        - name: heimdall
          persistentVolumeClaim:
            claimName: heimdall-claim
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall-ingress-service
  namespace: monitoring
spec:
  selector:
    k8s-app: heimdall
  ports:
  - name: http
    port: 80
    targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: heimdall
  namespace: monitoring

spec:
  rules:
    - host: heimdall.bas
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall-ingress-service
              servicePort: http
    - host: heimdall.thuis
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall-ingress-service
              servicePort: http
    - host: home.bas
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall
              servicePort: 80
    - host: home.thuis
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall
              servicePort: 80
